[gd_scene load_steps=17 format=2]

[ext_resource path="res://Spawning/Spawner.gd" type="Script" id=1]
[ext_resource path="res://Level/LevelGenerator/GeneratedLevels/NavMap4.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemy/Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://Weapons/Guns/Pistol.tscn" type="PackedScene" id=6]
[ext_resource path="res://Level/LevelGenerator/GeneratedLevels/NavMap5.tscn" type="PackedScene" id=7]
[ext_resource path="res://Drops/Dropper.gd" type="Script" id=8]
[ext_resource path="res://game_env.tres" type="Environment" id=9]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=10]
[ext_resource path="res://HUD/hud_theme.tres" type="Theme" id=11]
[ext_resource path="res://Level/LevelGenerator/GeneratedLevels/NavMap6.tscn" type="PackedScene" id=13]
[ext_resource path="res://HUD/WeaponSelector/WeaponSelector.gd" type="Script" id=14]

[sub_resource type="CylinderShape" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 80, 1, 80 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Game" type="Spatial"]
script = ExtResource( 5 )
levels = [ ExtResource( 2 ), ExtResource( 7 ), ExtResource( 13 ) ]

[node name="Player" parent="." instance=ExtResource( 4 )]
collision_layer = 2

[node name="GunController" parent="Player" index="2"]
StartingWeapon = ExtResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.479595, 0.513895, -0.711267, -0.00793025, 0.807999, 0.589131, 0.877454, 0.288185, -0.383437, 0, 15.3749, 23.07 )
shadow_enabled = true

[node name="Dropper" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
script = ExtResource( 8 )

[node name="PickUpArea" type="Area" parent="Dropper"]
transform = Transform( 1.5, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, 0, 0 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Dropper/PickUpArea"]
shape = SubResource( 2 )

[node name="Spawner" type="Spatial" parent="."]
script = ExtResource( 1 )
Enemy = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Spawner"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.552097, 0.83378, 0, -0.83378, 0.552097, 0, 24.3984, 14.2326 )

[node name="Void" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Void"]
shape = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 9 )

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
theme = ExtResource( 11 )
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
anchor_bottom = 1.0
margin_right = 140.0
custom_constants/separation = 40

[node name="GridContainer" type="GridContainer" parent="HUD/VBoxContainer"]
margin_right = 200.0
margin_bottom = 70.0
columns = 2

[node name="LevelLabel" type="Label" parent="HUD/VBoxContainer/GridContainer"]
margin_right = 91.0
margin_bottom = 33.0
text = "LEVEL: "

[node name="LevelValue" type="Label" parent="HUD/VBoxContainer/GridContainer"]
margin_left = 95.0
margin_right = 119.0
margin_bottom = 33.0
text = "0 "

[node name="WaveLabel" type="Label" parent="HUD/VBoxContainer/GridContainer"]
margin_top = 37.0
margin_right = 91.0
margin_bottom = 70.0
text = "WAVE:  "

[node name="WaveValue" type="Label" parent="HUD/VBoxContainer/GridContainer"]
margin_left = 95.0
margin_top = 37.0
margin_right = 119.0
margin_bottom = 70.0
text = "0 "

[node name="WeaponSelector" type="ItemList" parent="HUD/VBoxContainer"]
margin_top = 110.0
margin_right = 200.0
margin_bottom = 450.0
rect_min_size = Vector2( 200, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
custom_styles/bg = SubResource( 3 )
fixed_icon_size = Vector2( 64, 64 )
script = ExtResource( 14 )
weapon_inventory = [ ExtResource( 6 ) ]

[node name="GridContainer2" type="GridContainer" parent="HUD/VBoxContainer"]
margin_top = 490.0
margin_right = 200.0
margin_bottom = 560.0
columns = 2

[node name="HealthLabel" type="Label" parent="HUD/VBoxContainer/GridContainer2"]
margin_right = 112.0
margin_bottom = 33.0
text = "HEALTH: "

[node name="HealthValue" type="Label" parent="HUD/VBoxContainer/GridContainer2"]
margin_left = 116.0
margin_right = 140.0
margin_bottom = 33.0
text = "0 "

[node name="AmmoLabel" type="Label" parent="HUD/VBoxContainer/GridContainer2"]
margin_top = 37.0
margin_right = 112.0
margin_bottom = 70.0
text = "AMMO: "

[node name="AmmoValue" type="Label" parent="HUD/VBoxContainer/GridContainer2"]
margin_left = 116.0
margin_top = 37.0
margin_right = 140.0
margin_bottom = 70.0
text = "0 "

[connection signal="update_health" from="Player/Stats" to="HUD" method="_on_Stats_update_health"]
[connection signal="ammo_update" from="Player/GunController" to="HUD" method="_on_GunController_ammo_update"]
[connection signal="item_picked_up" from="Dropper" to="Player" method="_on_Dropper_item_picked_up"]
[connection signal="item_picked_up" from="Dropper" to="HUD/VBoxContainer/WeaponSelector" method="_on_Dropper_item_picked_up"]
[connection signal="body_entered" from="Dropper/PickUpArea" to="Dropper" method="_on_PickUpArea_body_entered"]
[connection signal="drop_item" from="Spawner" to="Dropper" method="_on_Spawner_drop_item"]
[connection signal="level_complete" from="Spawner" to="." method="_on_Spawner_level_complete"]
[connection signal="wave_update" from="Spawner" to="HUD" method="_on_Spawner_wave_update"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Void" to="Player" method="_on_Void_body_entered"]
[connection signal="item_selected" from="HUD/VBoxContainer/WeaponSelector" to="HUD/VBoxContainer/WeaponSelector" method="_on_WeaponSelector_item_selected"]
[connection signal="weapon_selected" from="HUD/VBoxContainer/WeaponSelector" to="Player" method="_on_WeaponSelector_weapon_selected"]

[editable path="Player"]
